--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,5 +9,6 @@
   year={2023},
   month={June},
   pdf={CAM-PAR.pdf},
+  html={http://www.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=bc861d5051426276ffe0bdc3ef48d419&keyword=CAM-PAR},
   selected={true}
 }
